--- a/my-project/.github/workflows/ci.yml
+++ b/my-project/.github/workflows/ci.yml
@@ -4,12 +4,9 @@
 name: Java CI with Gradle
 
 on:
-
   push:
     branches: [ master ]
-
   pull_request:
-
     branches: [ master ]
 
 jobs:
@@ -31,4 +28,11 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
+    - name: Build and Push Docker Image
+      uses: mr-smithers-excellent/docker-build-push@v4
+      with:
+        image: saniyaathani/myplatform
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
          
