--- a/my-project/.github/workflows/ci.yml
+++ b/my-project/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+ame: Java CI with Gradle
 
 on:
   push:
@@ -10,10 +10,10 @@ on:
     branches: [ master ]
 
 jobs:
-
   build-java:
 
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
 
@@ -27,8 +27,6 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build
-
-
 
       - name: Build and Push Docker Image
         uses: mr-smithers-excellent/docker-build-push@v4
