--- a/my-project/.github/workflows/ci.yml
+++ b/my-project/.github/workflows/ci.yml
@@ -5,9 +5,9 @@ ame: Java CI with Gradle
 
 on:
   push:
-    branches: [ master ]
+    branches: [ new ]
   pull_request:
-    branches: [ master ]
+    branches: [ new ]
 
 jobs:
   build-java:
